# terminal-demo-studio

./: .dockerignore  .gitignore  .mcp.json  ARCHITECTURE.md  CAPABILITIES.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run.ps1  run.sh
.github/: pull_request_template.md
.github/actions/render/: action.yml
.github/workflows/: auto-update-media.yml  ci.yml  publish.yml
assets/: starship.toml
docs/: autonomous-roadmap.md  github-action.md  releasing.md  reproducibility.md  showcase-gallery.md
docs/case-studies/: feature-flag-bugfix.md
examples/mock/: agent_loop.yaml  autonomous_video_claude_like.yaml  autonomous_video_codex_like.yaml  install_first_command.yaml  interactive_menu_showcase.yaml  list_detail_flow.yaml  policy_warning_gate.yaml  render_smoke.yaml  safety_wizard.yaml  speedrun_cuts.yaml
examples/real/: README.md  autonomous_video_codex_cli.yaml  autonomous_video_codex_complex_verified.yaml  autonomous_video_codex_hello_project_approval.yaml  autonomous_video_codex_hello_project_deny.yaml  autonomous_video_codex_multiturn.yaml  autonomous_video_codex_patch_flow.yaml  real_agent_demo.manifest.yaml  real_agent_demo.yaml
examples/showcase/: autonomous_claude_real_short.yaml  autonomous_codex_real_short.yaml  bugfix_catppuccin_glow.yaml  menu_dracula_contrast.yaml  onboarding_tokyo_neon.yaml  policy_nord_guard.yaml  recovery_gruvbox_retro.yaml  speedrun_nightshift.yaml
fixtures/autonomous_video/: mock_claude_like_tui.py  mock_codex_like_tui.py
prompts/: agent_prompt_templates.md
screenplays/: _template.yaml  agent_generated_feature_flag_fix.yaml  agent_generated_policy_guard.yaml  agent_generated_release_check.yaml  agent_generated_triage.yaml  dev_bugfix_workflow.yaml  drift_protection.yaml  rust_cli_demo.yaml  single_prompt_macos_demo.yaml
scripts/: install_context_smoke.sh  readme_smoke.sh  release_preflight.sh  render_showcase_media.sh
skills/terminal-demo-studio/: SKILL.md
terminal_demo_studio/: __init__.py  __main__.py  artifacts.py  cli.py  director.py  docker_runner.py  doctor.py  editor.py  interpolate.py  linting.py  mcp_server.py  models.py  prompt_policy.py  redaction.py  resources.py  tape.py  watch.py
terminal_demo_studio/adapters/: __init__.py  base.py
terminal_demo_studio/runtime/: __init__.py  events.py  pty_posix.py  pty_windows.py  runner.py  shells.py  video_runner.py  vt_screen.py  waits.py
terminal_demo_studio/templates/: before_after_bugfix.yaml  dev_bugfix.yaml  drift_protection.yaml  error_then_fix.yaml  install_first_command.yaml  mock_wizard.yaml  policy_guard.yaml  release_compliance.yaml  triage.yaml
tests/: test_cli.py  test_director.py  test_docker_runner.py  test_doctor.py  test_doctor_local_checks.py  test_editor.py  test_interpolate.py  test_mcp_server.py  test_models.py  test_redaction.py  test_runtime_runner.py  test_runtime_video_runner.py  test_runtime_waits.py  test_smoke_compile.py  test_tape.py  test_watch.py
